hphp/test/zend/bad/Zend/tests/generators/ignored_send_leak.php
<?php

function gen() {
    yield;
}

$gen = gen();
$gen->send(NULL);

echo "DONE";

?>